syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RotateToken(RotateTokenRequest) returns (RotateTokenResponse);
  rpc GetUserTokens(GetUserTokenQuery) returns (GetUserTokensResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string username = 1;
  string email = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string userId = 3;
  string username = 4;
  string email = 5;
  string sessionId = 6;
  string role = 7;
}

message RotateTokenRequest {
  string userId = 1;
  string refreshToken = 2;
  string sessionId = 3;
}

message RotateTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string sessionId = 3;
}

message GetUserTokenQuery {
  string userId = 1;
}

message GetUserTokensResponse {
  repeated string tokens = 1;
}
